--- a/ChessProgram/Queem.AI/Queem.AI.csproj
+++ b/ChessProgram/Queem.AI/Queem.AI.csproj
@@ -35,9 +35,9 @@
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
-    <ProjectReference Include="..\DebutMovesHolder\DebutMovesHolder.csproj">
-      <Project>{798AAC57-A4F3-4084-A8F8-8B5C6C3DD8A1}</Project>
-      <Name>DebutMovesHolder</Name>
+    <ProjectReference Include="..\DebutsLib\DebutsLib.csproj">
+      <Project>{ACD58B44-CEB6-4102-833E-599D99F03013}</Project>
+      <Name>DebutsLib</Name>
     </ProjectReference>
     <ProjectReference Include="..\QueemCore\Queem.Core.csproj">
       <Project>{5E1A8EB0-4749-426D-95A6-50A72CABF9D3}</Project>
