Minor fixes to pawn promotion logic

--- a/ChessProgram/QueemCore/Queem.Core.csproj
+++ b/ChessProgram/QueemCore/Queem.Core.csproj
@@ -37,6 +37,7 @@
   <ItemGroup>
     <Compile Include="AssemblyInfo.cs" />
     <Compile Include="Extensions\PawnPromotionExtension.cs" />
+    <Compile Include="HighlightedSquare.cs" />
     <Compile Include="Move.cs" />
     <Compile Include="Extensions\MyStringExtensions.cs" />
     <Compile Include="BitBoards\BitBoard.cs" />
