--- a/ChessProgram/Queem.AI/Queem.AI.csproj
+++ b/ChessProgram/Queem.AI/Queem.AI.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -10,7 +10,6 @@
     <RootNamespace>Queem.AI</RootNamespace>
     <AssemblyName>Queem.AI</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -46,5 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ChessSolver.cs" />
+    <Compile Include="Evaluator.cs" />
+    <Compile Include="ChessTreeNode.cs" />
   </ItemGroup>
 </Project>
