--- a/ChessProgram/QueemCore/Queem.Core.csproj
+++ b/ChessProgram/QueemCore/Queem.Core.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -78,6 +78,7 @@
     <Compile Include="History\DeltaChange.cs" />
     <Compile Include="ChessBoard\MovesArray.cs" />
     <Compile Include="AttacksGenerators\PawnAttacksGenerator.cs" />
+    <Compile Include="Extensions\MoveExtension.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup />
