Added weird sort for moves

--- a/ChessProgram/Queem.AI/Queem.AI.csproj
+++ b/ChessProgram/Queem.AI/Queem.AI.csproj
@@ -47,5 +47,6 @@
     <Compile Include="ChessSolver.cs" />
     <Compile Include="Evaluator.cs" />
     <Compile Include="ChessTreeNode.cs" />
+    <Compile Include="MovesSorter.cs" />
   </ItemGroup>
 </Project>
