--- a/ChessProgram/QueemSpeedBenchmark/QueemSpeedBenchmark.csproj
+++ b/ChessProgram/QueemSpeedBenchmark/QueemSpeedBenchmark.csproj
@@ -10,8 +10,10 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>QueemSpeedBenchmark</RootNamespace>
     <AssemblyName>QueemSpeedBenchmark</AssemblyName>
-    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
+    <TargetFrameworkProfile>
+    </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <PlatformTarget>x86</PlatformTarget>
